--- a/tekhenu/static/css/screen.css
+++ b/tekhenu/static/css/screen.css
@@ -263,7 +263,7 @@ button.large, a.button-large {
   -o-transition: border, 0.2s;
   transition: border, 0.2s;
   height: 33px;
-  padding: 0.6em 3em 0.8em;
+  padding: 0.5em 3em 0.8em;
   height: 45px;
   font-size: 100%;
 }
@@ -433,7 +433,7 @@ body {
   -o-transition: border, 0.2s;
   transition: border, 0.2s;
   height: 33px;
-  padding: 0.6em 3em 0.8em;
+  padding: 0.5em 3em 0.8em;
   height: 45px;
   font-size: 100%;
 }
